--- a/Sis457Licoreria/CpLicoreria/CpLicoreria.csproj
+++ b/Sis457Licoreria/CpLicoreria/CpLicoreria.csproj
@@ -169,6 +169,27 @@
   <ItemGroup>
     <None Include="Resources\clientes.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\iniciar-sesion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fondo autenticación.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fondo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo Licoreria.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fodo interior.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fondo cliente.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clientes1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
